# ZoF

./: .gitignore  Makefile.am  README.md  configure.ac  copy-builtin
cmd/: Makefile.am
cmd/arc_summary/: arc_summary2  arc_summary3
cmd/arcstat/: arcstat
cmd/mount_zfs/: Makefile.am
cmd/raidz_test/: Makefile.am
cmd/zdb/: Makefile.am  zdb.c
cmd/zed/: Makefile.am
cmd/zfs/: Makefile.am  zfs_main.c  zfs_project.c
cmd/zhack/: Makefile.am
cmd/zinject/: Makefile.am  translate.c  zinject.c
cmd/zpool/: Makefile.am  zpool_main.c  zpool_util.h  zpool_vdev.c
cmd/zpool/os/freebsd/: zpool_vdev_os.c
cmd/zpool/os/linux/: zpool_vdev_os.c
cmd/zstreamdump/: Makefile.am
cmd/ztest/: Makefile.am  ztest.c
cmd/zvol_id/: Makefile.am
config/: Rules.am  always-compiler-options.m4  always-python.m4  always-pyzfs.m4  kernel.m4  user.m4  zfs-build.m4
contrib/: Makefile.am
etc/: Makefile.am
include/: Makefile.am  libzfs.h  libzfs_impl.h  libzutil.h  zfeature_common.h  zfs_prop.h
include/linux/: mod_compat.h
include/os/freebsd/linux/: Makefile.am  compiler.h
include/os/freebsd/spl/: vnode_if.h
include/os/freebsd/spl/acl/: Makefile.am
include/os/freebsd/spl/rpc/: Makefile.am
include/os/freebsd/spl/sys/: Makefile.am  atomic.h  callb.h  ccompile.h  cmn_err.h  condvar.h  cpuvar.h  cpuvar_defs.h  cred.h  ctype.h  debug.h  disp.h  dnlc.h  dtrace.h  file.h  kcondvar.h  kmem.h  lock.h  misc.h  mod_os.h  mutex.h  param.h  policy.h  proc.h  processor.h  rwlock.h  sig.h  simd.h  simd_x86.h  spl_condvar.h  sysmacros.h  systm.h  taskq.h  time.h  timer.h  types.h  types32.h  varargs.h  vfs.h  vm.h  (+2 more)
include/os/freebsd/spl/sys/fm/: Makefile.am
include/os/freebsd/spl/sys/fm/fs/: Makefile.am
include/os/freebsd/spl/sys/sysevent/: Makefile.am
include/os/freebsd/zfs/sys/: Makefile.am  sha2.h  zfs_context_os.h  zfs_ioctl_compat.h  zfs_ioctl_os.h  zfs_vfsops.h  zfs_vnops.h  zfs_znode.h  zfs_znode_impl.h
include/os/linux/kernel/linux/: compiler_compat.h  mod_compat.h
include/os/linux/spl/sys/: debug.h  kmem_cache.h  kstat.h  strings.h  sysmacros.h
include/os/linux/zfs/sys/: sha2.h  zfs_context_os.h  zfs_dir.h  zfs_ioctl_os.h  zfs_vfsops.h  zfs_vnops.h  zfs_znode.h  zfs_znode_impl.h
include/spl/sys/: debug.h  kstat.h
include/sys/: Makefile.am  arc.h  cdefs.h  dbuf.h  debug.h  dmu.h  dmu_recv.h  dnode.h  mntent.h  spa.h  spa_impl.h  vdev.h  vdev_impl.h  zfs_context.h  zfs_ioctl.h  zfs_ioctl_impl.h  zfs_quotas.h  zfs_rlock.h  zfs_znode.h  zio.h  zio_crypt.h  zvol.h  zvol_impl.h
include/sys/fs/: zfs.h
lib/libefi/: Makefile.am  rdwr_efi.c
lib/libicp/: Makefile.am
lib/libnvpair/: Makefile.am
lib/libshare/: Makefile.am
lib/libspl/: Makefile.am
lib/libspl/include/: Makefile.am
lib/libspl/include/os/: Makefile.am
lib/libspl/include/os/linux/: Makefile.am  devid.h
lib/libspl/include/sys/: Makefile.am  debug.h  va_list.h
lib/libspl/os/linux/: gethostid.c
lib/libunicode/: Makefile.am
lib/libuutil/: Makefile.am
lib/libzfs/: Makefile.am  freebsd_fsshare.c  freebsd_libzfs_ioctl_compat.c  libzfs_changelist.c  libzfs_crypto.c  libzfs_dataset.c  libzfs_diff.c  libzfs_mount.c  libzfs_pool.c  libzfs_sendrecv.c  libzfs_util.c
lib/libzfs/os/freebsd/: libzfs_compat.c  libzfs_fsshare.c  libzfs_zmount.c
lib/libzfs/os/linux/: libzfs_mount_os.c  libzfs_pool_os.c  libzfs_util_os.c
lib/libzfs_core/: Makefile.am  libzfs_core.c  libzfs_core_compat.c
lib/libzpool/: Makefile.am  util.c
lib/libzpool/os/freebsd/: compat.c
lib/libzpool/os/linux/: compat.c
lib/libzutil/: Makefile.am  freebsd_zutil_import.c  zutil_import.c
lib/libzutil/os/freebsd/: zutil_device_path_os.c  zutil_import_os.c
lib/libzutil/os/linux/: zutil_device_path_os.c
man/man8/: zfs.8
module/: .gitignore  Makefile.bsd  Makefile.in
module/avl/: avl.c
module/lua/: lapi.c  ldo.c
module/nvpair/: nvpair.c
module/os/freebsd/spl/: opensolaris.c  opensolaris_kmem.c  opensolaris_kstat.c  opensolaris_sysevent.c  opensolaris_taskq.c  opensolaris_vfs.c  spl_procfs_list.c  spl_zlib.c
module/os/freebsd/zfs/: abd.c  arc_os.c  freebsd_crypto.c  freebsd_dmu.c  freebsd_kmod.c  freebsd_spa.c  freebsd_sysctl.c  hkdf.c  spa_misc_os.c  spa_stats.c  vdev_file.c  vdev_geom.c  vdev_label_os.c  zfs_acl.c  zfs_ctldir.c  zfs_debug.c  zfs_dir.c  zfs_file_os.c  zfs_fuid_os.c  zfs_ioctl_os.c  zfs_log.c  zfs_onexit_os.c  zfs_vfsops.c  zfs_vnops.c  zfs_znode.c  zio_crypt.c  zio_os.c  zvol.c  zvol_os.c
module/os/linux/spl/: Makefile.in  spl-generic.c  spl-kmem-cache.c
module/os/linux/zfs/: Makefile.in  mmp_os.c  spa_misc_os.c  vdev_disk.c  vdev_file.c  zfs_acl.c  zfs_ioctl_os.c  zfs_log.c  zfs_onexit_os.c  zfs_replay.c  zfs_vfsops.c  zfs_vnops.c  zfs_znode.c  zio_crypt.c  zio_os.c  zvol.c  zvol_os.c
module/unicode/: u8_textprep.c
module/zcommon/: zfeature_common.c  zfs_fletcher.c  zfs_fletcher_avx512.c  zfs_fletcher_intel.c  zfs_fletcher_sse.c  zfs_namecheck.c  zfs_prop.c  zprop_common.c
module/zfs/: Makefile.in  arc.c  dbuf.c  dbuf_stats.c  ddt.c  dmu.c  dmu_diff.c  dmu_object.c  dmu_objset.c  dmu_recv.c  dmu_send.c  dmu_traverse.c  dmu_tx.c  dmu_zfetch.c  dnode.c  dnode_sync.c  dsl_dataset.c  dsl_deadlist.c  dsl_destroy.c  dsl_dir.c  dsl_pool.c  dsl_scan.c  dsl_userhold.c  fm.c  gzip.c  metaslab.c  mmp.c  multilist.c  qat_compress.c  qat_crypt.c  sa.c  sha256.c  spa.c  spa_checkpoint.c  spa_config.c  spa_log_spacemap.c  spa_misc.c  spa_stats.c  txg.c  vdev.c  (+34 more)
rpm/generic/: zfs.spec.in
scripts/: Makefile.am  zfs-tests.sh  zfs.sh
tests/runfiles/: common.run  linux.run  rsend.run  slog_replay.run
tests/zfs-tests/cmd/: Makefile.am
tests/zfs-tests/cmd/largest_file/: largest_file.c
tests/zfs-tests/cmd/libzfs_input_check/: Makefile.am  libzfs_input_check.c
tests/zfs-tests/cmd/mkfile/: mkfile.c
tests/zfs-tests/cmd/user_ns_exec/: user_ns_exec.c
tests/zfs-tests/include/: blkdev.shlib  commands.cfg  libtest.shlib
tests/zfs-tests/tests/functional/: Makefile.am
tests/zfs-tests/tests/functional/acl/: acl_common.kshlib
tests/zfs-tests/tests/functional/alloc_class/: alloc_class_012_pos.ksh
(+129 files in other folders)
