SUBDIRS = fm sysevent

KERNEL_H = \
	$(top_srcdir)/include/os/freebsd/spl/sys/acl_impl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/acl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/assfail.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/atomic.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/avl_impl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/avl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/byteorder.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/callb.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/ccompile.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/cmn_err.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/compress.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/condvar.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/console.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/cred.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/ctype.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/debug_compat.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/debug.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/dirent.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/disp.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/dkio.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/dklabel.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/dnlc.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/elf.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/endian.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/errorq.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/extdirent.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/file.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/freebsd_rwlock.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/inttypes.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/isa_defs.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/kcondvar.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/kidmap.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/kmem_cache.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/kmem.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/kobj.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/kstat.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/list_impl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/list.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/lock.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/misc.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/mman.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/mntent.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/mnttab.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/mode.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/mount.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/mutex.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/note.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/nvpair_impl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/nvpair.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/param.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/pcpu.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/policy.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/proc.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/processor.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/random.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/refstr.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/rwlock.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sdt.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sema.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sid.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sig.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/simd_x86.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/simd.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/spl_pathname.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/stat.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/string.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/strings.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sunddi.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/synch.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sysevent.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/sysmacros.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/systeminfo.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/systm.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/taskq.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/thread.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/time.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/timer.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/types.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/types32.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/u8_textprep_data.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/u8_textprep.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/uio.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/uuid.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/va_list.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/varargs.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/vfs.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/vm.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/vmsystm.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/vnode_impl.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/vnode.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/zmod.h \
	$(top_srcdir)/include/os/freebsd/spl/sys/zone.h

EXTRA_DIST = $(COMMON_H) $(KERNEL_H) $(USER_H)
