KERNEL_H = \
	$(top_srcdir)/include/os/freebsd/zfs/sys/freebsd_crypto.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_ctldir.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_dir.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_ioctl_compat.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_vfsops.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_vnops.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_znode.h

EXTRA_DIST = $(COMMON_H) $(KERNEL_H) $(USER_H)
